# Pixeller

./: ChangeLog.md  LICENSE  README.md  package.yaml  pixellang.cabal
tutorial/02_Chapter-3/: MiniParser.hs
tutorial/02_Chapter-3/ch3calcapp/: CHANGELOG.md  Chapter3.md  ch3calcapp.cabal
tutorial/02_Chapter-3/ch3calcapp/app/: Eval.hs  Main.hs  Parser.hs  Pretty.hs
tutorial/03_Chapter-4/: Lambda.hs
tutorial/03_Chapter-4/ch4untype/: CHANGELOG.md  Chapter4.md  ch4untype.cabal
tutorial/03_Chapter-4/ch4untype/app/: Eval.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs
tutorial/04_Chapter-5/c5calctyped/: CHANGELOG.md  Chapter5.md  c5calctyped.cabal
tutorial/04_Chapter-5/c5calctyped/app/: Check.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
tutorial/04_Chapter-5/c5stlc/: CHANGELOG.md  Chapter5.md  c5stlc.cabal
tutorial/04_Chapter-5/c5stlc/app/: Check.hs  Eval.hs  Lexer.hs  Main.hs  Parser.hs  Pretty.hs  Syntax.hs
tutorial/05_Chapter-6/: HigherOrderInterp.hs  Interpreter.hs  Io.hs  Lazy.hs  ParametricHigherOrderInterp.hs
tutorial/06_Chapter-7/ch6poly/: CHANGELOG.md  ch6poly.cabal  hie.yaml
tutorial/06_Chapter-7/ch6poly/app/: Eval.hs  Infer.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  Type.hs
