cabal-version:      2.4
name:               ch3calcapp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Antonette Caldwell
maintainer:         antonette.caldwell@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ch3calcapp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
    	base 					^>=4.13.0.0,
	    mtl                  >= 2.2 && <3.0,
	    filepath             >= 1.3 && <1.4,
	    text                 >= 1.1 && <1.3,
	    pretty               >= 1.1 && <1.2,
	    process              >= 1.1 && <1.7,
	    directory            >= 1.2 && <1.4,
	    haskeline            >= 0.7 && <0.8,
	    containers           >= 0.5 && <0.6,
	    parsec               >= 3.1 && <3.2,
	    transformers         >= 0.4 && <0.6
    hs-source-dirs:   app
    default-language: Haskell2010
