cabal-version:      2.4
name:               ch4untype
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Antonette Caldwell
maintainer:         antonette.caldwell@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ch4untype
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base          ^>=4.13.0.0
    , containers    ^>=0.5
    , haskeline     >=0.7
    , mtl
    , parsec        ^>=3.1
    , pretty        ^>=1.1
    , transformers

  hs-source-dirs:   app
  default-language: Haskell2010
