cabal-version:      2.4
name:               c5calctyped
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Antonette Caldwell
maintainer:         antonette.caldwell@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable c5calctyped
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    Check
    Eval
    Parser
    Syntax
    Type
    Pretty

  -- LANGUAGE extensions used by modules in this package.
  other-extensions: GADTs
  build-depends:
    , base       ^>=4.13.0.0
    , haskeline  >=0.7
    , mtl
    , parsec     ^>=3.1
    , pretty     ^>=1.1

  hs-source-dirs:   app
  default-language: Haskell2010
